workx-rs/tui/src/chatwidget/snapshots/workx_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running workx -m <model_name> or in your config.toml

  1. gpt-6-astra (default)  Our most capable model for complex, demanding
                            work.
  2. gpt-5.6-sol            Latest frontier agentic coding model.
  3. gpt-5.6-terra          Balanced agentic coding model for everyday work.
  4. gpt-5.6-luna           Fast and affordable agentic coding model.
  5. gpt-5.5                Frontier model for complex coding, research, and
                            real-world work.
› 6. gpt-5.2 (current)      Optimized for professional work and long-running
                            agents.

  Press enter to confirm or esc to go back
