workx-rs/tui/src/chatwidget/snapshots/workx_tui__chatwidget__tests__replayed_delegated_tool_output.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: "lines_to_single_string(&cells[0])"
---
• Sent by Workx from task source-task
  Follow <up> & report
